--- a/kfa-backend/kfa-api/composer.json
+++ b/kfa-backend/kfa-api/composer.json
@@ -10,10 +10,13 @@
   "license": "MIT",
   "require": {
     "php": "^8.2",
+    "guzzlehttp/guzzle": "^7.10",
     "laravel/framework": "^11.31",
     "laravel/sanctum": "^4.2",
     "laravel/tinker": "^2.9",
+    "league/flysystem": "^3.30",
     "predis/predis": "^3.2",
+    "quix-labs/laravel-supabase-flysystem": "^1.0",
     "spatie/laravel-permission": "^6.21"
   },
   "require-dev": {
