--- a/kfa-website/package.json
+++ b/kfa-website/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.28.0",
     "@tanstack/react-table": "^8.13.0",
     "axios": "^1.12.2",
